Still trying to foward the right headers...

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -69,6 +69,9 @@ hystrix:
       queueSizeRejectionThreshold: ${hystrixMaxQueueSize:200}
       coreSize: ${hystrixThreadPoolSize:10}
 
+zuul:
+  sensitiveHeaders: 
+
 spring:
   profiles:
     active: default, swagger
