AQCU-1740: add specific timeout values

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,6 +53,16 @@ eureka:
 feign:
   hystrix:
     enabled: true
+  client:
+    config:
+      javaToR:
+        connectTimeout: ${javaToRServiceConnectTimeout:6000}
+        readTimeout: ${javaToRServiceReadTimeout:300000}
+        loggerLevel: full
+      nwisRa:
+        connectTimeout: ${nwisRaServiceConnectTimeout:6000}
+        readTimeout: ${nwisRaServiceReadTimeout:120000}
+        loggerLevel: full
 
 hystrix:
   shareSecurityContext: true
@@ -62,7 +72,7 @@ hystrix:
         isolation:
           strategy: THREAD
           thread:
-            timeoutInMilliseconds: ${hystrixThreadTimeout}
+            timeoutInMilliseconds: ${hystrixThreadTimeout:600000}
   threadpool:
     default:
       maxQueueSize: ${hystrixMaxQueueSize:200}
