--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <springfox.version>2.8.0</springfox.version>
         <aquarius.sdk.version>18.6.2</aquarius.sdk.version>
-        <aqcu.framework.version>0.0.4</aqcu.framework.version>
+        <aqcu.framework.version>0.0.5-SNAPSHOT</aqcu.framework.version>
     </properties>
 
     <distributionManagement>
