--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <springfox.version>2.8.0</springfox.version>
         <aquarius.sdk.version>18.8.1</aquarius.sdk.version>
-        <aqcu.framework.version>0.0.5</aqcu.framework.version>
+        <aqcu.framework.version>0.0.6-SNAPSHOT</aqcu.framework.version>
     </properties>
 
     <distributionManagement>
@@ -184,6 +184,32 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
                     <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>4.3.0</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.9</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>gov/usgs/aqcu/config/*.*</exclude>
+                        <exclude>gov/usgs/aqcu/serializer/SwaggerGsonSerializer.class</exclude>
+                        <exclude>gov/usgs/aqcu/Application.class</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
