AQCU-1799: merge docker and service code repos

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@
 /application.yml
 /.vscode/
 /aqcu-dv-application.yml
+**/*.crt
+**/*.csr
+**/*.key
+**/*.chain
+docker/certificates/intermediate1
+docker/certificates/root
+docker-compose-local.yml
