--- a/docker/config.env
+++ b/docker/config.env
@@ -2,7 +2,7 @@ javaToRServiceEndpoint=https://localhost:7500/aqcu-java-to-r/
 aqcuReportsWebserviceUrl=https://localhost:7499/
 aquariusServiceEndpoint=PUT_AQUARIUS_ENDPOINT_HERE_WITHOUT_/AQUARIUS/
 aquariusServiceUser=PUT_AQUARIUS_USERNAME_HERE
-nwisRaServiceEndpoint=https://reporting.nwis.usgs.gov/service
+nwisRaServiceEndpoint=https://localhost:8444/reporting-ws-core/service
 oauthResourceId=local-app
 oauthResourceTokenKeyUri=https://localhost:8443/auth/oauth/token_key
 CERT_IMPORT_DIRECTORY=/certificates
